# ot-harjoitustyo

./: README.md
dokumentaatio/: vaatimusmaarittely.md
hex-grid-app/: pyproject.toml  tasks.py
hex-grid-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  kaytto-ohje.md  tyoaikakirjanpito.txt  vaatimusmaarittely.md
hex-grid-app/src/: clock.py  dropdown.py  hexagon.py  hexmap.py  index.py  main.py  monster_notes.py  notes.py  pygametesti  pygametesti.py  renderer1.py  statblock.py
hex-grid-app/src/hex_notes/: 0.txt  1.txt  189.txt  2.txt  27.txt  40.txt
hex-grid-app/src/monster_notes/: 27.csv  36.csv  37.csv  43.csv  5.csv  51.csv  52.csv  60.csv  68.csv
hex-grid-app/src/tests/: dropdown_test.py  hexmap_test.py  main_test.py  statblock_test.py
hex-grid-app/src/ui/: UI.py
laskarit/: README.md  gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hslsekvenssi.md  sekvenssikaavio.md  sovelluslogiikka.md
