[tool.poetry]
name = "hex-grid-app"
version = "0.1.0"
description = ""
authors = ["Roope Kääriäinen <kaariainenroope@gmail.com>"]
readme = "README.md"
packages = [{include = "hex_grid_app"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
